SalesforceAssignments/Salesforce_Assignment_2/src/objects/Teach__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Teaches</relationshipLabel>
        <relationshipName>Teaches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Class</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teaches</relationshipLabel>
        <relationshipName>Teaches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teach</label>
    <nameField>
        <label>Teach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teaches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>